src/tests/snapshots/swayward__tests__window_opening__check_target_size@fsF-dhF500-b-wfsBN.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: BN\nconfig:\nwindow-rule {\n    open-fullscreen false\n    default-window-height { fixed 500; }\n    border { on; }\n}"
expression: snapshot
---
initial configure:
size: 1240 × 500, bounds: 1240 × 680, states: []

post-map configures:
size: 1240 × 680, bounds: 1240 × 680, states: [Activated]
